--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-streamlit==1.31.1
-pandas==2.2.0 
+streamlit==1.11.0
+pandas==2.2.0
+pymongo==4.6.1
+python-dotenv==1.0.1
+bcrypt==4.1.2
+Flask==3.0.2
+waitress==3.0.0 
