--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.11.0
-pandas==2.2.0
+pandas==2.0.3
 python-dotenv==1.0.1
 bcrypt==4.1.2
 cryptography==42.0.5
 plotly==5.18.0
 altair==4.2.2
+numpy==1.24.3
